textbox input not usable by zero opacity issue fixed on mobile contact us form

--- a/less/module2/curtains.less
+++ b/less/module2/curtains.less
@@ -8,6 +8,7 @@
 	left:0;
 	top:0;
 	opacity:0;
+	display:none;
 	.transition(~"opacity linear 0.15s");
 	 > div{
 		display:none;
@@ -25,6 +26,7 @@
 
 }
 .curtain.curtain-enter{
+	display:block;
     .opacity(.65);
     > div{
 	    display:block;
